<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ioana.quiz.SciQ1">


    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroundImage"
        android:scaleType="center"
        android:src="@mipmap/background1" />

    <TextView
        android:id="@+id/category"
        style="@style/categoryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category4" />

    <TextView
        android:id="@+id/question"
        style="@style/questionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2S" />


    <CheckBox
        android:id="@+id/checkBox"
        style="@style/checkBox"
        android:layout_width="@dimen/dimension300"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:text="@string/answerS21" />

    <CheckBox
        android:id="@+id/checkBox2"
        style="@style/checkBox"
        android:layout_width="@dimen/dimension300"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:text="@string/answerS22" />

    <CheckBox
        android:id="@+id/checkBox3"
        style="@style/checkBox"
        android:layout_width="@dimen/dimension300"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox2"
        android:text="@string/answerS23" />


    <CheckBox
        android:id="@+id/checkBox4"
        style="@style/checkBox"
        android:layout_width="@dimen/dimension300"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox3"
        android:text="@string/answerS24" />

    <Button
        android:id="@+id/next"
        style="@style/buttonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/score"
        style="@style/textViewScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/scorePoints"
        style="@style/textViewScorePoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
