<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSubmit"
    tools:context="com.example.ioana.quiz.SciSubmit">


    <ImageView
        android:id="@+id/golden"
        style="@style/imageViewGolden"
        android:layout_width="@dimen/dimension200"
        android:layout_height="@dimen/dimension200" />


    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroundImage"
        android:scaleType="centerCrop"
        android:src="@drawable/redp" />


    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimension90"
        android:text="@string/congratulations"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize2"
        android:textStyle="bold" />


    <Button
        android:id="@+id/restart"
        style="@style/buttonRestart"
        android:layout_width="@dimen/dimension200"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/share"
        style="@style/buttonShare"
        android:layout_width="@dimen/dimension200"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/quit"
        style="@style/buttonQuit"
        android:layout_width="@dimen/dimension200"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension20"
            android:text="@string/scoree"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize_category"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scorePoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension20"
            android:text="@string/scoreText"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize_category"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scorePointss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension20"
            android:text="@string/scoreTextt"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize_category"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
