<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ioana.quiz.SciQ2">


    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroundImage"
        android:scaleType="center"
        android:src="@mipmap/background1" />

    <TextView
        android:id="@+id/category"
        style="@style/categoryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category4" />

    <TextView
        android:id="@+id/question"
        style="@style/questionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3S" />


    <EditText
        android:id="@+id/answerS31"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"/>


    <Button
        android:id="@+id/next"
        style="@style/buttonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/score" />

    <TextView
        android:id="@+id/score"
        style="@style/textViewScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/scorePoints" />

    <TextView
        android:id="@+id/scorePoints"
        style="@style/textViewScorePoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>
